# keyedarchivelib

./: .coveragerc  .flake8  .gitignore  .pyre_configuration  README.md  publish.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
keyedarchivelib/: __init__.py  api.py  compat.py  util.py
test/: test_api.py  test_util.py
